# test_load_mesh

./: CMakeLists.txt  beam.stl  beam_y_up.dae  beam_z_up.dae  package.xml
src/: main.cpp
